--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
+  "repository": "GamePowerNetwork/launcher",
   "main": "build/electron/main.js",
   "build": {
+    "appId": "network.gamepower.launcher",
     "extends": null,
     "files": [
       "build/**/*"
@@ -16,25 +18,19 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
-    "@tailwindcss/forms": "^0.4.0",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/electron-devtools-installer": "^2.2.1",
     "@types/jest": "^27.4.0",
+    "@types/electron-devtools-installer": "^2.2.1",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
-    "electron-reload": "^2.0.0-alpha.1",
-    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "update-electron-app": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,7 +38,11 @@
     "test": "react-scripts test",
     "postinstall": "electron-builder install-app-deps",
     "electron:dev": "concurrently \"cross-env BROWSER=none yarn start\" \"wait-on http://localhost:3183 && tsc -p electron -w\" \"wait-on http://localhost:3183 && tsc -p electron && electron .\"",
-    "electron:build": "yarn build && tsc -p electron && electron-builder"
+    "electron:build": "yarn build && tsc -p electron && electron-builder",
+    "package": "electron-forge package --asar",
+    "make": "electron-forge make",
+    "installer:mac": "electron-installer-dmg --overwrite --icon='./installer/icon.icns' --background='./installer/installBackground.png' --title='GamePower Launcher' ./dist/mac-arm64/gamepower-launcher.app GamePowerLauncher",
+    "dist": "electron-builder"
   },
   "eslintConfig": {
     "extends": [
@@ -63,14 +63,59 @@
     ]
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.63",
+    "@electron-forge/maker-deb": "^6.0.0-beta.63",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
+    "@electron-forge/maker-zip": "^6.0.0-beta.63",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.0.0-beta.63",
+    "@tailwindcss/forms": "^0.4.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^17.0.0",
-    "electron-builder": "^22.14.5",
+    "electron-installer-dmg": "^3.0.0",
+    "electron-packager": "^15.4.0",
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-squirrel-startup": "^1.0.0",
     "eslint-plugin-jest": "^26.1.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
     "wait-on": "^6.0.0"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "asar": {}
+      },
+      "plugins": [
+        ["@electron-forge/plugin-auto-unpack-natives"]
+      ],
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "GamePower Network"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
