--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
-    "@types/jest": "^27.4.0",
     "@types/electron-devtools-installer": "^2.2.1",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "custom-electron-titlebar": "^4.1.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
@@ -92,7 +93,9 @@
         "asar": {}
       },
       "plugins": [
-        ["@electron-forge/plugin-auto-unpack-natives"]
+        [
+          "@electron-forge/plugin-auto-unpack-natives"
+        ]
       ],
       "makers": [
         {
